Added a script for production where we set the NODE_ENV variable to production

--- a/4-natours/package.json
+++ b/4-natours/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "NODE_ENV=production node server.js"
   },
   "author": "Trishit Hazra",
   "license": "ISC",
